adiciona primeiros elementos visuais

--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <title>Teacher Verônica Serey</title>
+  <link rel="stylesheet" href="estilos.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
 <body>
+
   <h1>Teacher Verônica Serey</h1>
 
-  <p>Elit veniam recusandae aspernatur repellat assumenda Harum assumenda iure dolore assumenda facere? Dolorem accusamus cumque in ab unde ratione earum omnis Cum omnis molestiae quos consequatur quia Ratione praesentium numquam.</p>
+  <p>Adipisicing recusandae quaerat placeat similique adipisicing
+  Ipsam optio tenetur explicabo porro eligendi nam non nam,
+  consequuntur, molestias maiores, provident. Asperiores dicta
+  veritatis nostrum corrupti facilis! Voluptas provident vel enim
+  beatae</p>
 
 </body>
 </html>
