adiciona elementos estrutura html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 
+  <img src="images/emojimama.png" class="logo">
   <h1>Teacher Verônica Serey</h1>
 
   <p>Adipisicing recusandae quaerat placeat similique adipisicing
@@ -16,6 +17,19 @@
   consequuntur, molestias maiores, provident. Asperiores dicta
   veritatis nostrum corrupti facilis! Voluptas provident vel enim
   beatae</p>
+
+  <div id="precos">
+    <div style="grid-area: header">Valores dos cursos e aulas</div>
+    <div>Turmas (entre 2 e 6 alunos)</div> <div>R$ 150,00 (2 x por semana)</div>
+    <div>Individual</div>           <div>R$  60,00 hora/aula</div>
+  </div>
+
+  <h2>Contatos</h2>
+
+  <p>Lorem et voluptates harum minus eius. Dolorem sapiente
+  reprehenderit voluptas molestias in officia non. Vero maiores quia
+  earum praesentium voluptates Exercitationem nostrum magni voluptas
+  qui earum Voluptas molestiae corrupti maiores</p>
 
 </body>
 </html>
