ajusta tabela de valores e outros

--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 </head>
 <body>
 
-  <img src="images/emojimama.png" class="logo">
-  <h1>Teacher Verônica Serey</h1>
+  <header>
+    <h1>Teacher Verônica Serey</h1>
+    <img src="images/emojimama.png" class="logo">
+  </header>
 
-  <p>Adipisicing recusandae quaerat placeat similique adipisicing
+  <p>
+  Adipisicing recusandae quaerat placeat similique adipisicing
   Ipsam optio tenetur explicabo porro eligendi nam non nam,
   consequuntur, molestias maiores, provident. Asperiores dicta
   veritatis nostrum corrupti facilis! Voluptas provident vel enim
@@ -20,8 +23,8 @@
 
   <div id="precos">
     <div style="grid-area: header">Valores dos cursos e aulas</div>
-    <div>Turmas (entre 2 e 6 alunos)</div> <div>R$ 150,00 (2 x por semana)</div>
-    <div>Individual</div>           <div>R$  60,00 hora/aula</div>
+    <div>Turmas<br>(de 2 a 6 alunos)</div> <div>R$ 150,00<br>(2 aulas de 1h por semana)</div>
+    <div>Individual</div>           <div>R$ 60,00 por hora-aula</div>
   </div>
 
   <h2>Contatos</h2>
