adequação a estilo e palete

--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 <body>
 
   <header>
-    <h1>Teacher Verônica Serey</h1>
-    <img src="images/emojimama.png" class="logo">
+    <div>
+    <h1 style="font-size: 130%; margin-bottom: -0.5em;">Teacher</h1>
+    <h1>Verônica Serey</h1>
+    </div>
+
+    <img src="images/avatar.png" class="logo">
   </header>
 
   <p>
@@ -23,16 +27,22 @@
 
   <div id="precos">
     <div style="grid-area: header">Valores dos cursos e aulas</div>
-    <div>Turmas<br>(de 2 a 6 alunos)</div> <div>R$ 150,00<br>(2 aulas de 1h por semana)</div>
-    <div>Individual</div>           <div>R$ 60,00 por hora-aula</div>
+    <div>Turmas<br>(de 2 a 6 alunos)</div>
+    <div style="text-align: right;">R$ 150,00<br>(2 aulas de 1h por semana)</div>
+
+    <div>Individual</div>
+    <div style="text-align: right;">R$ 60,00 por hora-aula</div>
   </div>
 
-  <h2>Contatos</h2>
+  <h2>Entre em contato</h2>
 
-  <p>Lorem et voluptates harum minus eius. Dolorem sapiente
-  reprehenderit voluptas molestias in officia non. Vero maiores quia
-  earum praesentium voluptates Exercitationem nostrum magni voluptas
-  qui earum Voluptas molestiae corrupti maiores</p>
+  <p><img style="vertical-align:middle" src="images/telefone.png" width="30px">
+  Você pode entrar em contato comigo pelo telefone (83) 9 9974 6209. De preferência, em horário comercial.</p>
+
+  <p><img style="vertical-align:middle" src="images/whatsapp.png" width="30px"> 
+  A qualquer hora, me envie mensagem no WhatsApp (93) 9 9974 6209. Responderei assim que puder.</p>
+
+  <p><img style="vertical-align:middle" src="images/instagram.png" width="30px"> Siga meu perfil <em>@teacherveronicaserey</em> para acompanhar as novidades.</p>
 
 </body>
 </html>
