adiciona link para instagram

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <p><img style="vertical-align:middle" src="images/whatsapp.png" width="30px"> 
   A qualquer hora, me envie mensagem no WhatsApp (93) 9 9974 6209. Responderei assim que puder.</p>
 
-  <p><img style="vertical-align:middle" src="images/instagram.png" width="30px"> Siga meu perfil <em>@teacherveronicaserey</em> para acompanhar as novidades.</p>
+  <p><img style="vertical-align:middle" src="images/instagram.png" width="30px"> Siga meu perfil <a href="https://www.instagram.com/teacherveronicaserey/"><em>@teacherveronicaserey</em></a> para acompanhar as novidades.</p>
 
 </body>
 </html>
