corrige valor do curso

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div id="precos">
     <div style="grid-area: header">Valores dos cursos e aulas</div>
     <div>Turmas<br>(de 2 a 6 alunos)</div>
-    <div style="text-align: right;">R$ 150,00<br>(2 aulas de 1h por semana)</div>
+    <div style="text-align: right;">R$ 750,00 (5 × jR$ 150,00)<br>(2 aulas de 1h por semana)</div>
 
     <div>Individual</div>
     <div style="text-align: right;">R$ 60,00 por hora-aula</div>
