ajusta texto de preços

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
   <div id="precos">
     <div style="grid-area: header">Valores dos cursos e aulas</div>
-    <div>Turmas<br>(de 2 a 6 alunos)</div>
-    <div style="text-align: right;">R$ 750,00 (5 × jR$ 150,00)<br>(2 aulas de 1h por semana)</div>
+    <div>Turmas (de 2 a 6 alunos)<br>2 aulas de 1h por semana</div>
+    <div style="text-align: right;">R$ 750,00<br>(5 × R$ 150,00)</div>
 
-    <div>Individual</div>
+    <div>Individual<br>aula avulsa de 1h</div>
     <div style="text-align: right;">R$ 60,00 por hora-aula</div>
   </div>
 
