--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 
   <h2>Entre em contato</h2>
 
-  <p><img style="vertical-align:middle" src="images/telefone.png" width="30px">
-  Você pode entrar em contato comigo pelo telefone (83) 9 9974 6209. De preferência, em horário comercial.</p>
+  <p><img style="vertical-align:middle" src="images/telefone.png" width="40px">
+  Você pode entrar em contato comigo pelo telefone (83) 9 9974 6209, em horário comercial.</p>
 
-  <p><img style="vertical-align:middle" src="images/whatsapp.png" width="30px"> 
+  <p><img style="vertical-align:middle" src="images/whatsapp.png" width="40px"> 
   A qualquer hora, me envie mensagem no WhatsApp (93) 9 9974 6209. Responderei assim que puder.</p>
 
-  <p><img style="vertical-align:middle" src="images/instagram.png" width="30px"> Siga meu perfil <a href="https://www.instagram.com/teacherveronicaserey/"><em>@teacherveronicaserey</em></a> para acompanhar as novidades.</p>
+  <p><img style="vertical-align:middle" src="images/instagram.png" width="40px"> Siga meu perfil no Instagram <a href="https://www.instagram.com/teacherveronicaserey/"><em>@teacherveronicaserey</em></a> para acompanhar as novidades.</p>
 
 </body>
 </html>
