adiciona parágrafo introdutório

--- a/index.html
+++ b/index.html
@@ -18,12 +18,19 @@
     <img src="images/avatar.png" class="logo">
   </header>
 
-  <p>
-  Adipisicing recusandae quaerat placeat similique adipisicing
-  Ipsam optio tenetur explicabo porro eligendi nam non nam,
-  consequuntur, molestias maiores, provident. Asperiores dicta
-  veritatis nostrum corrupti facilis! Voluptas provident vel enim
-  beatae</p>
+  <p>Olá,</p>
+
+  <p>Meu nome é Verônica Serey e sou professora de inglês licenciada em letras
+  pela UFPB. Tenho 20 anos de experiência com ensino de inglês em todas as
+  faixas etárias. Lecionei em escolas de idiomas e de educação infantil, mais
+  especificamente em escolas bilíngues. Atualmente tenho me voltado para o
+  ensino de inglês para crianças e adolescentes e ensino à distância, tendência
+  cada vez mais forte como modalidade de ensino (tendência anterior à pandemia,
+  mas, claro, reforçada por ela).</p>
+
+  <p>Se você tiver interesse em estudar comigo, sinta-se à vontade para entrar
+  em contato comigo, pelos canais mais abaixo. Abaixo, segue os valores de meus
+  serviços tanto em cursos/turmas, como individuais.</p>
 
   <div id="precos">
     <div style="grid-area: header">Valores dos cursos e aulas</div>
